<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_leaderboard">LeaderBoard</string>
    <string name="action_rate">Rate App</string>
    <string name="action_reset">Reset</string>
    <string name="action_share">Share</string>
    <string name="action_undo">Undo</string>
    <string name="animation_fast">Fast</string>
    <string name="animation_slow">Slow</string>
    <string name="animation_speed">Animation Speed</string>
    <string name="animation_title">Animation</string>
    <string name="auto">Auto rotate</string>
    <string name="congratulations">Congratulations! You beat the high score.</string>
    <string name="dialog_score">Your score is :</string>
    <string name="endless">Endless</string>
    <string name="game_ends">Game ends at</string>
    <string name="game_orientation">Orientation</string>
    <string name="game_over">Game Over!</string>
    <string name="game_won">You Won!</string>
    <string name="help">Swipe (Up, Down, Left, Right) to move the tiles. When two tiles with the same number touch, they merge into one. When 2048 tile is created, the player wins!</string>
    <string name="high_score">High Score</string>
    <string name="landscape">Landscape</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="portrait">Portrait</string>
    <string name="reset_confirm">Do you want to restart the game?</string>
    <string name="score">Score</string>
    <string name="share_app">Share App</string>
    <string name="share_message">I just scored %1$d on 2048! Check this out %2$s .</string>
    <string name="sound_title">Sound</string>
    <string name="try_again">Try Again</string>
    <string name="_0">0</string>
    <string name="accept">Accept</string>
    <string name="achievement_champion">CgkIjLXt-8caEAIQDg</string>
    <string name="achievement_expert">CgkIjLXt-8caEAIQEw</string>
    <string name="achievement_explorer">CgkIjLXt-8caEAIQDA</string>
    <string name="achievement_god">CgkIjLXt-8caEAIQAw</string>
    <string name="achievement_legend">CgkIjLXt-8caEAIQAg</string>
    <string name="achievement_level_3">CgkIjLXt-8caEAIQBA</string>
    <string name="achievement_level_4">CgkIjLXt-8caEAIQBQ</string>
    <string name="achievement_level_5">CgkIjLXt-8caEAIQBg</string>
    <string name="achievement_newbie">CgkIjLXt-8caEAIQCQ</string>
    <string name="achievement_novice">CgkIjLXt-8caEAIQDw</string>
    <string name="achievement_proficient">CgkIjLXt-8caEAIQEg</string>
    <string name="achievement_promoter">CgkIjLXt-8caEAIQCw</string>
    <string name="achievement_rookie">CgkIjLXt-8caEAIQEA</string>
    <string name="achievement_supreme">CgkIjLXt-8caEAIQFA</string>
    <string name="achievement_talented">CgkIjLXt-8caEAIQEQ</string>
    <string name="achievement_winner">CgkIjLXt-8caEAIQDQ</string>
    <string name="ad_unit_id">a153266fb8a43b6</string>
    <string name="app_id">912671857292</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="app_name">2048</string>
    <string name="app_url">http://play.google.com/store/apps/details?id=com.digiplex.game</string>
    <string name="app_url_amazon">http://www.amazon.com/gp/mas/dl/android?p=com.digiplex.game</string>
    <string name="app_url_amazonpro">http://www.amazon.com/gp/mas/dl/android?p=com.digiplex.gamepro</string>
    <string name="app_url_nokia">http://store.ovi.mobi/content/557178</string>
    <string name="app_url_samsung">http://www.samsungapps.com/appquery/appDetail.as?appId=com.digiplex.digi2048</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="leaderboard_leaderboard">CgkIjLXt-8caEAIQAA</string>
    <string name="leaderboard_leaderboard_2_1">CgkIjLXt-8caEAIQFQ</string>
    <string name="leaderboard_leaderboard_2_4">CgkIjLXt-8caEAIQFg</string>
    <string name="license_failed">License check failed.</string>
    <string name="rate_app">market://details?id=</string>
    <string name="rate_app_amazon">amzn://apps/android?p=</string>
    <string name="rate_app_nokia">market://details?id=</string>
    <string name="rate_app_samsung">samsungapps://ProductDetail/</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="test_device_1">2191EA58D6126A166850F7EE583162C4</string>
    <string name="test_device_2">2585B6D899740F62CD341145F1CE3DF8</string>
    <string name="test_device_3">095FFFEC783CC7640D4BC468ABE198F7</string>
    <string name="test_device_4">5C734CC60867FD210584382EA5BFAD44</string>
    <string name="unknown_error">Unknown error.</string>
</resources>
